# misc

korean/: .gitignore  README-koreantopik2.md  README.md  README_topik2.md
korean/.claude/: settings.local.json
korean/.notes/: parallel-processing-exploration.md
korean/anki/: README.md  guide.md
korean/input/: korean-english.tsv  test.tsv  words-only.tsv
korean/output/: etymology-10.tsv  etymology-11.tsv  etymology-12.tsv  etymology-13.tsv  etymology-14.tsv  etymology-15.tsv  etymology-16.tsv  etymology-17.tsv  etymology-18.tsv  etymology-19.tsv  etymology-2.tsv  etymology-3.tsv  etymology-4.tsv  etymology-5.tsv  etymology-6.tsv  etymology-7.tsv  etymology-8.tsv  etymology-9.tsv  etymology-all.tsv  examples-1.tsv  examples-10.tsv  examples-11.tsv  examples-12.tsv  examples-13.tsv  examples-14.tsv  examples-15.tsv  examples-16.tsv  examples-17.tsv  examples-18.tsv  examples-19.tsv  examples-2.tsv  examples-3.tsv  examples-4.tsv  examples-5.tsv  examples-6.tsv  examples-7.tsv  examples-8.tsv  examples-9.tsv  examples-all.tsv  notes-1.tsv  (+19 more)
korean/prompts/: analysis-example.md  generate-audio.md  generate-fix.md  (+21 more)
llm/ableton/: .gitignore  README.md  plan.md  pyproject.toml  workflow.md
llm/ableton/docs/: README.md
llm/ableton/notes/: bass-tone.md  docs-aggregation.md  script.md
llm/ableton/scripts/: concat-docs.py  convert-manual.py  fetch-manual.py
topik1/: 1.csv  1.html  10.csv  11.csv  15.txt  16.csv  16.txt  17.txt  2.csv  3.csv  4.csv  5.csv  7.csv  8.csv  9.txt  readme.md
windows/: README.md  dev-git.md  dev-vscode.md  dev.md  media.md  setup.md
(+136 files in other folders)
